--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^0.19.1",
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
+    "mysql2": "^2.1.0",
     "postcss-pxtorem": "^4.0.1",
+    "sequelize": "^5.21.3",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
     "vuex": "^3.0.1"
