--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.1",
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
+    "eruda": "^2.3.3",
     "koa": "^2.11.0",
     "mysql2": "^2.1.0",
     "postcss-pxtorem": "^4.0.1",
