--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-cors": "0.0.16",
-    "koa-router": "^7.4.0"
+    "koa-router": "^7.4.0",
+    "mysql2": "^2.1.0",
+    "sequelize": "^5.21.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
