--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "deploy": "vue-cli-service build && node upload.js"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.2.2",
     "axios": "^0.19.1",
     "core-js": "^2.6.5",
     "element-ui": "^2.12.0",
     "eruda": "^2.3.3",
     "koa": "^2.11.0",
     "postcss-pxtorem": "^4.0.1",
+    "qiniu": "^7.3.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.7",
     "vuex": "^3.0.1"
@@ -22,6 +25,7 @@
     "@vue/cli-service": "^3.11.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "tinymce": "^5.3.0",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
